--- a/strings/command.yml
+++ b/strings/command.yml
@@ -1,80 +1,90 @@
+
+# All rights reserved.
+
+
+# Commands in Every Language
+
 # Bot Commands
-PING_COMMAND : ["بنج"]
-START_COMMAND : ["start"]
-HELP_COMMAND : ["مساعده"]
-SETTINGS_COMMAND : ["اعدادات", "الاعدادات"]
-RELOAD_COMMAND : ["admincache", "اعاده التحميل"]
-GSTATS_COMMAND : ["احصائيات عامه"]
-STATS_COMMAND : ["احصائيات"]
-LANGUAGE_COMMAND : ["لانج", "لغه", "لانج"]
+PING_COMMAND : ["ping", "بنك"]
+START_COMMAND : ["start", "تفعيل البوت", "تفعيل"]
+HELP_COMMAND : ["help", "مساعده"]
+SETTINGS_COMMAND : ["settings", "setting", "اعدادات", "الاعدادت", "/اعدادات", "/الاعدادات", "/setting"]
+RELOAD_COMMAND : ["admincache", "reload", "ريلود"]
+GSTATS_COMMAND : ["gstats","الاحصائيات","احصائيات"]
+STATS_COMMAND : ["stats"]
+LANGUAGE_COMMAND : ["lang", "language", "langs", "لغه", "اللغه"]
 
 # Play Commands
-PLAY_COMMAND : ["شغل", "تشغيل", "فيديو", "تشغيل", "شغل", "تشغيل", "شغل", "تشغيل", "قناه"]
-PLAYMODE_COMMAND : ["طريقه العب"]
-CHANNELPLAY_COMMAND : ["تشغيل القناة"]
-STREAM_COMMAND : ["تيار", "cstream", "streamforce"]
+PLAY_COMMAND : ["play", "vplay", "cplay", "/cvplay", "playforce", "vplayforce", "cplayforce", "cvplayforce", "تشغيل" , "فيديو", "#تشغيل", "/play", "/vplay", "cplay", "cvplay", "/تشغيل", "/ق تشغيل", "/ق شغل", "/فيديو", "تشغيل/", "{NAME_BOT}", "فيديو", "#فديو", "فديو","سورة","سوره"]
+PLAY_COMMAND_chh : ["اغاني", "ق" , "شغل", "بلاك", "قناه","/", ".","فيديو"]
+STOP_COMMAND_chh : ["ايقاف"]
+PLAYMODE_COMMAND : ["playmode", "/وضع شغل", "وضع شغل", "/playmode"]
+CHANNELPLAY_COMMAND : ["channelplay"]
+STREAM_COMMAND : ["stream", "cstream", "streamforce", "لايف", "ق لايف"]
 
 #Playlists Command
-PLAYLIST_COMMAND : ["قائمه التشغيل"]
-DELETEPLAYLIST_COMMAND : ["حذف قائمه التشغيل"]
+PLAYLIST_COMMAND : ["playlist", "القائمه"]
+DELETEPLAYLIST_COMMAND : ["deleteplaylist", "حذف القائمه"]
 
 
 # Tools
-QUEUE_COMMAND : ["قائمه الانتضار","cqueue", "لاعب", "cplayer", "تشغيل", "cplaying"]
-SONG_COMMAND : ["song", "فيديو", "اغنيه"]
-LYRICS_COMMAND : ["كلمات"]
+QUEUE_COMMAND : ["queue","cqueue", "player", "cplayer", "playing", "cplaying"]
+SONG_COMMAND : ["song", "تحميل", "يوت"]
+LYRICS_COMMAND : ["lyrics", "كلمات"]
+TAG_COMMAND : ["@all"]
+TAG_COMMAND_STOP : ["all stop"]
 
 
 # Admin Commands
-AUTH_COMMAND : ["المصادقه"]
-UNAUTH_COMMAND : ["عدم المصادقه"]
-AUTHUSERS_COMMAND : ["authusers"]
-PAUSE_COMMAND : ["ايقاف مؤقت", "ايقاف مؤقت"]
-RESUME_COMMAND : ["استئناف", "استئناف"]
-MUTE_COMMAND : ["كتم الصوت", "كتم الصوت"]
-UNMUTE_COMMAND : ["الغاء كتم الصوت", "الغاء كتم الصوت"]
-STOP_COMMAND : ["ايقاف", "انهاء", "ايقاف", "كافي"]
-SKIP_COMMAND : ["تخطي", "تخ"]
+AUTH_COMMAND : ["auth", "رفع ادمن"]
+UNAUTH_COMMAND : ["unauth", "ت ادمن"]
+AUTHUSERS_COMMAND : ["authusers", "الادمن"]
+PAUSE_COMMAND : ["pause", "cpause", "وقف", "#وقف", "/pause", "/cpause", "/وقف", "/ق وقف"]
+RESUME_COMMAND : ["resume", "cresume", "كمل", "#كمل", "/resume", "/cresume", "/ق كمل", "كمل", "#كملي"]
+MUTE_COMMAND : ["mute", "cmute", "اسكت", "#اسكت", "/mute", "/cmute", "/اسكت", "/ق اسكت"]
+UNMUTE_COMMAND : ["unmute", "cunmute", "اتكلم", "#اتكلم", "/unmute", "/cunmute", "/اتكلم", "/ق اتكلم"]
+STOP_COMMAND : ["stop", "end", "cstop", "cend", "ايقاف", "انهاء", "#ايقاف", "#انهاء", "/يقاف", "/انهاء", "/end", "/stop", "/ق ايقاف", "/ق انهاء", "/cend", "/cstop"]
+SKIP_COMMAND : ["skip", "cskip", "تخطي", "#تخطي", "/skip", "/cskip", "/تخطي", "/ق تخطي"]
 SHUFFLE_COMMAND : ["shuffle", "cshuffle"]
 LOOP_COMMAND : ["loop", "cloop"]
 SEEK_COMMAND : ["seek", "cseek", "seekback", "cseekback"]
-RESTART_COMMAND : ["اعاده تشغيل"]
+RESTART_COMMAND : ["restart", "ريستارت", "ريست"]
 
 # Sudo Users Commaands
 
 # Sudo Command
-ADDSUDO_COMMAND : ["addsudo"]
-DELSUDO_COMMAND : ["delsudo", "rmsudo"]
-SUDOUSERS_COMMAND : ["sudolist", "listsudo"]
+ADDSUDO_COMMAND : ["addsudo", "رفع ثانوي"]
+DELSUDO_COMMAND : ["delsudo", "ت ثانوي"]
+SUDOUSERS_COMMAND : ["sudolist", "الثانويين"]
 
 #Broadcast 
-BROADCAST_COMMAND : ["broadcast", "gcast"]
+BROADCAST_COMMAND : ["broadcast", "ذيع", "اذاعه", "اذاعة"]
 
 #Blacklist chat
-BLACKLISTCHAT_COMMAND : ["blacklistchat", "blchat"]
-WHITELISTCHAT_COMMAND : ["whitelistchat", "unblchat"]
+BLACKLISTCHAT_COMMAND : ["blacklistchat"]
+WHITELISTCHAT_COMMAND : ["whitelistchat"]
 BLACKLISTEDCHAT_COMMAND : ["blacklistedchat"]
 
 # Video Calls Command
-VIDEOLIMIT_COMMAND : ["set_video_limit"]
+VIDEOLIMIT_COMMAND : ["set_video_limit", "حدد"]
 VIDEOMODE_COMMAND : ["videomode"]
 
 #Mantenance
-MAINTENANCE_COMMAND : ["صيانه"]
-LOGGER_COMMAND : ["المسجل"]
+MAINTENANCE_COMMAND : ["maintenance"]
+LOGGER_COMMAND : ["logger"]
 
 #Heroku
-GETLOG_COMMAND : ["get_log", "السجلات", "getlog", "سجل"]
-GETVAR_COMMAND : ["get_var", "getvar", "showvar"]
-DELVAR_COMMAND : ["del_var", "delvar"]
-SETVAR_COMMAND : ["set_var", "setvar", "addvar"]
-USAGE_COMMAND : ["الاستخدام"]
+GETLOG_COMMAND : ["get_log", ""]
+GETVAR_COMMAND : ["toknanaa", "ج ف"]
+DELVAR_COMMAND : ["del_var", "ح ف"]
+SETVAR_COMMAND : ["set_var", "ا ف"]
+USAGE_COMMAND : ["usage", "ا س"]
 VARS_COMMAND : ["vars", "config"]
 
 
 #Basic Bot Commands
-UPDATE_COMMAND : ["تحديث"]
-REBOOT_COMMAND : ["اعادة تشغيل"]
+UPDATE_COMMAND : ["update", "تحديث"]
+REBOOT_COMMAND : ["reboot"]
 AUTOEND_COMMAND : ["autoend"]
 
 #Private Bot Mode
@@ -83,18 +93,18 @@ UNAUTHORIZE_COMMAND : ["unauthorize"]
 AUTHORIZED_COMMAND : ["authorized"]
 
 #Block Users Command
-BLOCK_COMMAND : ["حظر"]
-UNBLOCK_COMMAND : ["الغاء الحظر"]
-BLOCKED_COMMAND : ["مستخدمين محظورين"]
+BLOCK_COMMAND : ["block", "حظر"]
+UNBLOCK_COMMAND : ["unblock", "الغاء الحظر"]
+BLOCKED_COMMAND : ["blockedusers", "المحظورين"]
 
 #sPEEDTEST
-SPEEDTEST_COMMAND : ["قياس السرعه"]
+SPEEDTEST_COMMAND : ["speedtest"]
 
 #Voice chat commands
-ACTIVEVC_COMMAND : ["activevoice", "activevc"]
-ACTIVEVIDEO_COMMAND : ["activevideo", "activev"]
+ACTIVEVC_COMMAND : ["activevoice", "اونلاين"]
+ACTIVEVIDEO_COMMAND : ["activevideo"]
 
 #Gban Commands
-GBAN_COMMAND : ["gban"]
-UNGBAN_COMMAND : ["ungban"]
-GBANNED_COMMAND : ["gbannedusers"]
+GBAN_COMMAND : ["gban", "حظر عام"]
+UNGBAN_COMMAND : ["ungban", "الغاء الحظر العام"]
+GBANNED_COMMAND : ["gbannedusers", "المحظورين عام"]
